# Agentic-NLQ-Copilot

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  netlify.toml  pyproject.toml  render.yaml
data/spider_data/: README.txt  dev.json  tables.json  test.json  train_others.json  train_spider.json
data/spider_data/test_database/concert_singer/: concert_singer.sqlite
src/copilot/: __init__.py  agent.py  api.py  benchmark.py  cli.py  config.py  executor.py  guardrails.py  llm.py  models.py  reliability.py  schema_retriever.py  spider.py
tests/: test_api.py  test_benchmark_compare.py  test_executor.py  test_guardrails.py
web/: app.js  index.html  styles.css
